[metadata]
name = AIAH_utility
version = 0.0.1
author = Hartmut Häntze, AI Assisted Healthcare Lab
author_email = hartmut.haentze@charite.de
url = https://ai-assisted-healthcare.com

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    isort 
    black 
    flake8
    scipy
    numpy
    tqdm
    SimpleITK
    pandas
    ipywidgets
    matplotlib
    torch
    monai

[options.packages.find]
where = src
exclude =
    bundles*
    data*
    logs*
    metadata*
    model*
    notebooks*
    weights*


[flake8]
max-line-length = 120 
select = C,E,F,W,B
extend-ignore = 
	# disable E203 (whitespace before :) because it is not PEP8 and Black compliant
	E203,
	# disable E114 (indentation is not a multiple of four) because of a bug in flake8_nb where it sees empty lines as comment lines
	E114,
	# line break before binary operator. Deactivated because of incompatibility with black
  	W503,
	# lambda expressions can be a good alternative to small single use functions
	E731
import_order_style = appnexus
exclude =
    .git,
    .eggs/,
    __pycache__,
    .ipynb_checkpoints,
    */tmp_*,
    */temp_*,
    build/,
    dist/,
    data/,
    data_local/,
    data_test/,
    deprecated,
    logs/,
    notebooks/project_stage_1,
    wandb,
    ./raidiance/annot/DicomViewer,
    .venv,
    runs/  
per-file-ignores =
    tests/*:E741